REFACTOR unused parameter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,8 @@
 
 <div 
 class="d-flex base-page"
-(swipeleft)="onSwipeLeft($event)"
-(swiperight)="onSwipeRight($event)"
+(swipeleft)="onSwipeLeft()"
+(swiperight)="onSwipeRight()"
 >
     <div 
     class="sidebar-wrapper" 
