--- a/src/app/components/articles/article-overview/article-overview.component.html
+++ b/src/app/components/articles/article-overview/article-overview.component.html
@@ -63,7 +63,7 @@
 
     <div class="mb-5 row" id="player-characters">
         <ng-container *ngFor="let playerCharacter of playerCharacters">
-            <div class="mb-4 col-md-4 col-sm-6 col-12">
+            <div class="mb-4 col-lg-3 col-md-4 col-sm-6 col-12">
                 <a [routerLink]="playerCharacter.getAbsoluteRouterUrl()">
                     <div class="card">
                         <ng-container *ngIf="playerCharacter.images">
