--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -10,14 +10,14 @@
 </div>
 
 <ng-template #campaignLink>
-    <a class="btn btn-primary" href="!! campaign ? campaignHomeUrl : campaignOverviewUrl">
+    <a class="btn btn-primary" [href]="!! campaign ? campaignHomeUrl : campaignOverviewUrl">
         Retry
         <span class="ml-2 fas fa-redo-alt"></span>
     </a> 
 </ng-template>
 
 <ng-template #loginLink>
-    <a class="btn btn-primary" href="loginUrl">
+    <a class="btn btn-primary" [href]="loginUrl">
         Log in again
         <span class="ml-2 fas fa-redo-alt"></span>
     </a> 
