--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -7,7 +7,7 @@
   <div class="row mx-0" id="campaign-overview-heading">
     <div id="heading-buttons">
       <a [routerLink]="profileUrl" class="btn btn-secondary mx-2">
-        <i class="fa fa-user"></i>
+        <i class="fa fa-user-circle"></i>
         <span> Profile</span> 
       </a>
 
