FIX border entries not getting pushed to the bottom as they should
margin-top auto rule on the footer block should've pushed it to the bottom, but it didn't in mobile view.
That was because in mobile view the swiped-right animation set display to block, not flex.
That somehow lead to margin-top auto not pushing things to the bottom.
Setting it to flex fixed that.

However it enabled the individual list items to get squeezed together on screens
with insufficient vertical length.
For those, flex-shink:0 blocked that shrinkage.

Lastly a border was established to distinguish the bottom entries more
clearly from general navigation entries.

--- a/src/app/components/utility/sidebar/sidebar.component.scss
+++ b/src/app/components/utility/sidebar/sidebar.component.scss
@@ -87,6 +87,10 @@ ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
+
+    &.footer{
+        border-top: 4px inset;
+    }
 }
 
 
@@ -95,6 +99,7 @@ li{
     height: 3rem;
     font-weight: bold;
     font-size: large;
+    flex-shrink: 0;
 
     a{
         height: 100%;
@@ -234,7 +239,7 @@ li{
     }
 
     #sidebar.swiped-right{
-        display: block;
+        display: flex;
         width: 75vw;
     
         -webkit-animation: slideInLeft-mobile 0.2s ease-out;
