--- a/src/app/components/articles/campaign-overview/campaign-overview.component.html
+++ b/src/app/components/articles/campaign-overview/campaign-overview.component.html
@@ -30,25 +30,48 @@
     </div>
 
     <h3 class="flex-1 mb-0 text-center">
-      Choose your campaign
+      <ng-container *ngIf="campaignData.length > 0; else noCampaignHeading">
+        Choose your campaign
+      </ng-container>
       <app-spinner *ngIf="isLoading"></app-spinner>
     </h3>
   </div>
   <div class="row flex-1 mx-0" id="campaign-overview-body">
-    <ng-container *ngFor="let campaign of campaignData">
-      <a class="px-0 campaign pointer"
-      (click)="routeToCampaign(campaign.name)"
-      [ngClass]="{
-        'col-sm-12': campaignData.length === 1,
-        'col-sm-6': campaignData.length === 2 || campaignData.length === 4,
-        'col-sm-4': campaignData.length === 3 || campaignData.length >= 5
-      }"
-      [style.background-image]="'url(' + constants.wikiUrl + campaign.background_image + ')'">
-        <div class="campaign-overlay overlay-heading text-center">
-          <h3 class="mb-0 px-3">{{ campaign.name }}</h3>
-        </div>
-      </a>
+    <ng-container *ngIf="campaignData?.length > 0 && false; else noCampaign">
+      <ng-container *ngFor="let campaign of campaignData">
+        <a class="px-0 campaign pointer"
+        (click)="routeToCampaign(campaign.name)"
+        [ngClass]="{
+          'col-sm-12': campaignData.length === 1,
+          'col-sm-6': campaignData.length === 2 || campaignData.length === 4,
+          'col-sm-4': campaignData.length === 3 || campaignData.length >= 5
+        }"
+        [style.background-image]="'url(' + constants.wikiUrl + campaign.background_image + ')'">
+          <div class="campaign-overlay overlay-heading text-center">
+            <h3 class="mb-0 px-3">{{ campaign.name }}</h3>
+          </div>
+        </a>
+      </ng-container>
     </ng-container>
 
   </div>
 </div>
+
+<ng-template #noCampaign>
+  <div class="w-100 h-100 position-relative d-flex justify-content-center">
+    <img class="w-100 h-100" [src]="constants.dragonFrameUrl" alt="Image of a red dragon frame">
+    <div class="position-absolute frame-text">
+      <h4 class="mb-1">
+        You have not yet been invited into any campaign.
+      </h4>
+      <div>
+        Please inform your DM or the person within your group administrating the webserver 
+        to add you to the required permission group.
+      </div>
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #noCampaignHeading>
+    No Campaign available!
+</ng-template>
