Replace loading spinner useage with specific component for that

--- a/src/app/components/articles/admin/admin.component.html
+++ b/src/app/components/articles/admin/admin.component.html
@@ -143,7 +143,7 @@
                     <span class="fas fa-dragon"></span>
                     Campaigns
                     <ng-container *ngIf="isWaitingForCampaignCreation">
-                        <i class="ml-3 spinner-border"></i>
+                        <app-spinner class="ml-3"></app-spinner>
                     </ng-container>
                 </h3>
 
