Fix spinner not being centered

--- a/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
+++ b/src/app/components/utility/recently-updated-articles-list/recently-updated-articles-list.component.html
@@ -54,10 +54,10 @@
     
 </div>
 
-<ng-container *ngIf="isLoadingNextPage">
-    <div class="mb-4"> 
+<ng-container *ngIf="true">
+    <div class="w-100 d-flex justify-content-center">
         <app-spinner></app-spinner> 
-    </div> 
+    </div>
 </ng-container>
 
 <ng-template #articleIconTemplate let-context>
