--- a/src/app/components/articles/spells/spells.component.scss
+++ b/src/app/components/articles/spells/spells.component.scss
@@ -41,7 +41,7 @@ table{
     }
 }
 
-.badge-secondary:hover{
+.bg-secondary:hover{
     background-color: var(--#{dark});
     color: var(--link-blue);
 }
