--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -15,7 +15,7 @@
       <span class="d-inline-flex flex-wrap align-items-center ml-3">
         
         <ng-container *ngFor="let connection of cardData.player_class_connections">
-          <span class="badge badge-secondary badge-sm mr-3"
+          <span class="badge bg-secondary badge-sm mr-3"
           (click)="emitClassSelectEvent($event, connection.player_class_details.name)">
             {{ connection.player_class_details.name }}
           </span>
@@ -146,7 +146,7 @@
         <div>
           Classes:
           <ng-container *ngFor="let connection of cardData.player_class_connections">
-            <span class="badge badge-secondary badge-lg p-2 mr-3 pointer"
+            <span class="badge bg-secondary badge-lg p-2 mr-3 pointer"
             (click)="emitClassSelectEvent($event, connection.player_class_details.name)">
               {{ connection.player_class_details.name }}
   
