--- a/src/app/components/articles/spells/spells.component.html
+++ b/src/app/components/articles/spells/spells.component.html
@@ -3,7 +3,7 @@
         <h1 class="text-center mb-3">
             Spells
             <ng-container *ngFor="let selectedClass of selectedClasses; let i = index" >
-                <span class="badge badge-secondary pointer" 
+                <span class="badge bg-secondary pointer" 
                 (click)="selectedClasses.splice(i, 1)">
                     {{ selectedClass }} <i class="fa fa-times"></i>
                 </span>
