--- a/src/app/components/utility/quotefield/quotefield.component.html
+++ b/src/app/components/utility/quotefield/quotefield.component.html
@@ -25,7 +25,7 @@
           <span class="d-inline-flex align-items-center flex-wrap">
             <!-- Display Existing Quote Connections -->
             <ng-container *ngFor="let connection of quote.connections; let connectionIndex = index">
-              <span class="badge badge-secondary p-2 mr-2 text-center vanish-container">
+              <span class="badge bg-secondary p-2 mr-2 text-center vanish-container">
                 <a [routerLink]="connectedCharacterURLs[connectionIndex]">
                   {{ connection.character_details.name }}
                 </a>
