Rename CSS class float-right to float-end
This is part of upgrading to bootstrap 5, as they renamed the class.

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -68,7 +68,7 @@
                     <app-animated-toggle
                     [message]="'Delete your account?'"
                     (confirmationEvent)="deleteThisUser()"
-                    class="float-right"
+                    class="float-end"
                     >
                         <div id="inactiveButton">
                             <div class="btn btn-outline-danger">
