--- a/src/app/components/utility/article-footer/article-footer.component.html
+++ b/src/app/components/utility/article-footer/article-footer.component.html
@@ -9,7 +9,7 @@
     *ngIf="showDelete"
     [deleteMessage]="deleteMessage"
     (deleteEvent)="onDelete()"
-    class="col-md-9 float-right"
+    class="col-md-9"
     ></app-delete-toggle>
 </div>
 
