--- a/src/app/components/utility/campaign/campaign.component.html
+++ b/src/app/components/utility/campaign/campaign.component.html
@@ -69,7 +69,7 @@
                         <app-delete-toggle
                         [deleteMessage]="'Remove '+ user.username +' as admin?'"
                         (deleteEvent)="onRemoveAdmin(user)"
-                        class="float-right px-0 mt-0"
+                        class="px-0 mt-0"
                         ></app-delete-toggle>
                     </div>
 
@@ -102,7 +102,7 @@
                         <app-delete-toggle
                         [deleteMessage]="'Remove '+ user.username +' as member?'"
                         (deleteEvent)="onRemoveMember(user)"
-                        class="float-right px-0 mt-0"
+                        class="px-0 mt-0"
                         ></app-delete-toggle>
                     </div>
 
@@ -133,7 +133,7 @@
                         <app-delete-toggle
                         [deleteMessage]="'Remove '+ user.username +' as guest?'"
                         (deleteEvent)="onRemoveGuest(user)"
-                        class="float-right px-0 mt-0"
+                        class="px-0 mt-0"
                         ></app-delete-toggle>
                     </div>
 
@@ -182,7 +182,7 @@
                         <app-delete-toggle
                         [deleteMessage]="'Remove response?'"
                         (deleteEvent)="onRemoveResponse(emptyResponse)"
-                        class="float-right px-0"
+                        class="px-0"
                         ></app-delete-toggle>
                     </div>
 
