--- a/src/app/components/utility/delete-toggle/delete-toggle.component.html
+++ b/src/app/components/utility/delete-toggle/delete-toggle.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="hasDeletePermission">
     <app-animated-toggle
-    class="float-right"
+    class="float-end"
     [message]="deleteMessage"
     (confirmationEvent)="emitDeleteEvent()"
     >
