--- a/src/app/components/utility/edit-toggle/edit-toggle.component.html
+++ b/src/app/components/utility/edit-toggle/edit-toggle.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="hasUpdatePermission">
-    <a class="btn btn-secondary float-right" [routerLink]="link" >
+    <a class="btn btn-secondary float-end" [routerLink]="link" >
         <i class="fa"
         [ngClass]="{
             'fa-pencil': !isInUpdateState, 
