--- a/src/app/components/utility/location-accordion/location-accordion.component.html
+++ b/src/app/components/utility/location-accordion/location-accordion.component.html
@@ -14,7 +14,7 @@
                     {{ location.name }} 
                 </a>
             </span>
-            <i class="fa float-right icon" 
+            <i class="fa float-end icon" 
             [ngClass]="{
                 'fa-chevron-down': !panelIsOpen(i),
                 'fa-chevron-up': panelIsOpen(i)
