--- a/src/app/components/utility/session/session.component.html
+++ b/src/app/components/utility/session/session.component.html
@@ -36,7 +36,7 @@
         
                 <!-- Edit Toggler -->
                 <ng-container *ngIf="hasUpdatePermission">
-                    <div class="btn btn-secondary float-right" 
+                    <div class="btn btn-secondary float-end" 
                     (click)="toggleFormState()">
                         <i class="fa fa-pencil" 
                         [ngClass]="{
