--- a/src/app/components/utility/user-row/user-row.component.html
+++ b/src/app/components/utility/user-row/user-row.component.html
@@ -59,8 +59,8 @@
     <div class="delete-request d-flex animate__animated animate__flipInY">
         <div class="mr-3"><strong>Delete {{user.username}}?</strong></div>
         <div class="d-inline-flex">
-            <div class="btn btn-danger float-right mr-2" (click)="deleteUser()"> Yes </div>
-            <div class="btn btn-secondary float-right" (click)="toggleDeleteState()"> No </div>
+            <div class="btn btn-danger float-end mr-2" (click)="deleteUser()"> Yes </div>
+            <div class="btn btn-secondary float-end" (click)="toggleDeleteState()"> No </div>
         </div>
     </div>
 </ng-template>
