--- a/src/app/components/articles/session-audio/session-audio.component.html
+++ b/src/app/components/articles/session-audio/session-audio.component.html
@@ -60,7 +60,7 @@
             <!-- Prior Session -->
             <div class="col-lg-3 col-6">
                 <ng-container *ngIf="priorSessionAudioUrl">
-                    <a [routerLink]="priorSessionAudioUrl" class="btn btn-secondary float-right"> 
+                    <a [routerLink]="priorSessionAudioUrl" class="btn btn-secondary float-end"> 
                         Session {{articleData.sessionAudioNeighbours.priorSessionAudio.sessionNumber}}
                         <i class="fa fa-arrow-right ml-1"></i>
                     </a>
