--- a/src/app/components/utility/dumb-components/animated-toggle/animated-toggle.component.html
+++ b/src/app/components/utility/dumb-components/animated-toggle/animated-toggle.component.html
@@ -9,9 +9,9 @@
 </ng-template>
 
 <ng-template #activeToggle>
-  <div class="delete-request float-right">
+  <div class="delete-request float-end">
     <span class="mr-3"> <strong>{{message}}</strong> </span>  
-    <div class="btn btn-danger float-right mr-2" (click)="emitConfirmationEvent()"> Yes </div>
-    <div class="btn btn-secondary float-right" (click)="toggleState()"> No </div>  
+    <div class="btn btn-danger float-end mr-2" (click)="emitConfirmationEvent()"> Yes </div>
+    <div class="btn btn-secondary float-end" (click)="toggleState()"> No </div>  
   </div>
 </ng-template>
